--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /.vs/tomas/FileContentIndex/0c7df47a-d75e-4581-8976-a4250b6da797.vsidx
 /.vs/tomas/config/applicationhost.config
 /.vs/slnx.sqlite-journal
+/.vs/tomas/v17/.wsuo
+/.vs/tomas/v17/DocumentLayout.json
