añado metafisica resumen

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /.vs/slnx.sqlite-journal
 /.vs/tomas/v17/.wsuo
 /.vs/tomas/v17/DocumentLayout.json
+.vs/VSWorkspaceState.json
+.vs/tomas/v17/DocumentLayout.backup.json
